--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+{% block content %}
 <h1>Football News</h1>
 
 <h5>NPM: </h5>
@@ -11,9 +13,22 @@
 
 <a href="{% url 'main:create_news' %}">
   <button>+ Add News</button>
+</a> <br>
+
+<a href="{% url 'main:logout' %}">
+  <button>Logout</button>
 </a>
 
+<h5>Sesi terakhir login: {{ last_login }}</h5>
+
 <hr>
+
+<a href="?filter=all">
+    <button type="button">All Articles</button>
+</a>
+<a href="?filter=my">
+    <button type="button">My Articles</button>
+</a>
 
 {% if not news_list %}
 <p>Belum ada data berita pada football news.</p>
@@ -42,3 +57,4 @@
 {% endfor %}
 
 {% endif %}
+{% endblock content %}
