--- a/main/templates/edit_news.html
+++ b/main/templates/edit_news.html
@@ -51,6 +51,11 @@
           </button>
         </div>
       </form>
+      <button
+        onclick="showToast('Sample Title', 'This is a sample message for the toast notification.')"
+      >
+        Click to Show Toast
+      </button>
     </div>
   </div>
 </div>
