--- a/main/templates/create_news.html
+++ b/main/templates/create_news.html
@@ -50,6 +50,11 @@
         </div>
       </form>
     </div>
+    <button
+      onclick="showToast('Sample Title', 'This is a sample message for the toast notification.')"
+    >
+      Click to Show Toast
+    </button>
   </div>
 </div>
 {% endblock %}
